--- a/src/MaxKitsenko/MaxKitsenko.Voeethos.Console/MaxKitsenko.Voeethos.Console.csproj
+++ b/src/MaxKitsenko/MaxKitsenko.Voeethos.Console/MaxKitsenko.Voeethos.Console.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{80BA9C36-119B-44B8-9A75-04AFEDDB2585}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{BAB53B15-0281-42B9-B73E-EE1D1BDC8EDA}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MaxKitsenko.Voeethos</RootNamespace>
-    <AssemblyName>MaxKitsenko.Voeethos</AssemblyName>
+    <RootNamespace>MaxKitsenko.Voeethos.Console</RootNamespace>
+    <AssemblyName>MaxKitsenko.Voeethos.Console</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -40,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Threading\AsyncLock.cs" />
-    <Compile Include="Threading\AsyncSemaphore.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
