--- a/src/MaxKitsenko/MaxKitsenko.Voeethos.Console/MaxKitsenko.Voeethos.Console.csproj
+++ b/src/MaxKitsenko/MaxKitsenko.Voeethos.Console/MaxKitsenko.Voeethos.Console.csproj
@@ -44,9 +44,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Threading\AsyncLockExample1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MaxKitsenko.Voeethos\MaxKitsenko.Voeethos.csproj">
+      <Project>{80ba9c36-119b-44b8-9a75-04afeddb2585}</Project>
+      <Name>MaxKitsenko.Voeethos</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
